# tenzro-studio

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
docs/: BUILD.md  serving-policy.md
scripts/: build-sidecar.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-sidecar.sh  enable-wallet-persistence.sh
src-tauri/src/: cable.rs  crash_safety.rs  device_commands.rs  hardware.rs  lib.rs  main.rs  node_lifecycle.rs  rpc_bridge.rs  sidecar.rs  streaming.rs  telemetry.rs  wallet.rs  watchdog.rs
src/components/: CommandPalette.tsx  ConversationSidebar.tsx  MCPPanel.tsx  Markdown.tsx  SettingsModal.tsx  Skeleton.tsx  WalletDrawer.tsx
src/lib/: chain.ts  conversations.ts  passkey.ts  routing.test.ts  routing.ts  settings.ts  userop.ts
src/pages/: Home.tsx
