[package]
name = "tenzro-studio"
version = "0.1.0"
edition = "2024"
description = "Tenzro Studio — run, serve, and contribute AI to the Tenzro Network"
license = "Apache-2.0"
publish = false
repository = "https://github.com/tenzro/tenzro-studio"
homepage = "https://tenzro.com"

# Empty [workspace] isolates this app from any parent workspace so the
# bundle builds the same way whether the repo is cloned standalone or
# nested next to the tenzro-network monorepo during development.
[workspace]

# Production release profile. `strip` drops debug symbols so the shipped
# binary is tens of MB rather than ~300 MB (the unstripped size blew up the
# bundle pipeline on a near-full disk). `lto`/`codegen-units` trade build time
# for a leaner, faster binary — fine for a release artifact, not used in dev.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri shell
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
# Native OS dialogs (file picker, confirm, message box). Replaces
# window.confirm / window.alert which the WebView blocks in some Tauri
# configurations. See docs/serving-policy.md research bundle.
tauri-plugin-dialog = "2"
# Non-secret preference store: theme, default model, chat retention,
# telemetry opt-in flag. Settings.json under the app's data dir.
tauri-plugin-store = "2"
# Deep-link scheme `tenzro-studio://` for join-validator referral
# links, model-share links, etc. The single-instance plugin uses the
# `deep-link` feature so Windows/Linux behave like macOS.
tauri-plugin-deep-link = "2"
# window-vibrancy intentionally removed: transparent+vibrancy on
# macOS causes severe WindowServer-compositor contention when a
# heavy Metal client (llama-server) is also using the GPU. See
# tauri-apps/tauri#9220 + #8255. Confirmed user-visible whole-screen
# flicker on M2. Opaque dark theme keeps the chrome aesthetic without
# the per-frame backdrop sampling tax.

# GUI-free shared logic: embedded-node lifecycle, llama-server sidecar
# management, the JSON-RPC bridge, the SSE chat-streaming engine, hardware
# profiling, and the crash-safety PID registry. The `#[tauri::command]`
# handlers in this crate are thin wrappers that delegate to these. The same
# crate backs the headless `tenzro-studio-cli`, so GUI and CLI share one
# source of truth. Path dep (sibling repo) until published — same publish
# story as tenzro-node.
tenzro-studio-core = { path = "../../tenzro-studio-core" }

# Async + RPC plumbing for the in-process node lifecycle.
tokio = { version = "1", features = ["full", "process"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Daily-rotated file log under ~/.tenzro/inference/logs/ so user
# crash reports include the run-up to the failure (stderr alone is
# lost when the user closes the terminal or launches from Finder).
tracing-appender = "0.2"
# Crash safety: libc::atexit for the last-resort sidecar cleanup hook
# that runs even when Rust panic propagation is bypassed (non-unwinding
# panics in wry's WKWebView callbacks, process::exit, etc.). See
# src/crash_safety.rs. futures-util is already declared above and is
# also used by crash_safety / streaming for FutureExt::catch_unwind.
libc = "0.2"
# Opt-in crash + error telemetry. DEFAULT OFF — only initialised when
# `~/.tenzro/inference/telemetry.enabled` exists, so a fresh install
# sends nothing without explicit user consent. DSN read from the
# TENZRO_STUDIO_SENTRY_DSN env var at build time (None at compile = no-op).
sentry = { version = "0.48", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic"] }
sentry-tracing = "0.48"
dirs = "5"

# rustls CryptoProvider. The embedded node's libp2p transport authenticates
# TCP with libp2p-tls using the PQ-hybrid X25519MLKEM768 group, which ONLY
# aws-lc-rs provides. `tenzro-node::main` installs this provider before any
# TLS subsystem starts — but Studio spawns the node WITHOUT going through that
# main, so we must install it ourselves in `run()` or every peer handshake
# fails at the TLS upgrade ("Failed to upgrade client connection"). Version +
# features MUST match the monorepo workspace so Cargo unifies to one instance.
rustls = { version = "0.23.39", default-features = false, features = ["std", "aws-lc-rs", "tls12"] }

# Embedded Tenzro node. Distribution model: the installer ships a
# compiled-in tenzro-node so the user never installs or runs the
# node binary themselves. Pinned to a published version so this
# Cargo.toml resolves cleanly from a fresh clone.
#
# Until tenzro-node hits crates.io, contributors hacking on both
# tenzro-network and tenzro-inference at once can add a
# `[patch.crates-io] tenzro-node = { path = "../tenzro-network/crates/tenzro-node" }`
# block at their workspace root — the patch is NOT in this Cargo.toml so
# the published app build stays path-free and reproducible.
tenzro-node = "0.1"

# Wallet integration — in-process direct calls so the user's wallet
# stays local (keystore on disk, balance read from the embedded node's
# synced chain state). `tenzro-wallet` is declared with the same path
# tenzro-node resolves to (via cargo's path-collapse) so there's only
# one TenzroWalletService type in the build, and trait calls from this
# crate type-check against the same Arc<...> the node hands back.
tenzro-wallet = "0.1"

# Hardware-backed device keys (macOS/iOS Secure Enclave P-256 + ECIES
# secret-wrapping) and the platform-agnostic keystore-unlock trait. The
# SE/Touch-ID ceremony AND the biometric `SecureEnclaveUnlocker` that makes
# the wallet persist across restarts both live here, so Studio no longer
# carries `security-framework` directly. Same local `[patch.crates-io]`
# publish story as tenzro-node.
tenzro-device-key = "0.1"
tenzro-keystore-unlock = "0.1"
hex = "0.4"

# Device-side passkey ceremony primitives, lifted from
# apps/tenzro-desktop. The private key MUST stay in the platform secure
# enclave (Spec §15.10), so the ceremony runs in the Tauri process
# rather than the WebView. Wallet RPCs themselves are operator-hosted
# (rpc.tenzro.network) — Studio is an RPC client for those.
#
# `webauthn-authenticator-rs` with the `cable` feature drags `btleplug`
# for the BLE side of FIDO caBLE (cross-device passkey via QR + BLE
# tunnel). Per-OS Bluetooth permission strings are required at runtime
# (Info.plist for macOS, manifest entry for Windows).
webauthn-authenticator-rs = { version = "0.6.1-dev", features = ["cable"] }
webauthn-rs-proto = "0.6.1-dev"
url = "2"
async-trait = "0.1"

[features]
# Bundled trainer ships a managed Python venv inside the app bundle so
# the user gets Tenzro Train contribution out of the box. Off by default
# during dev (the venv is heavy to provision in CI); the release build
# turns it on via `cargo tauri build --features bundled-trainer`.
default = []
bundled-trainer = []
